src/mozart_interpreter_modularized/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> command
Rule 1     command -> variable_declaration END
Rule 2     command -> variable_attribution END
Rule 3     command -> command command END
Rule 4     command -> register_command END
Rule 5     command -> if_conditional
Rule 6     command -> else_conditional
Rule 7     command -> OPEN_SCOPE
Rule 8     command -> END_SCOPE
Rule 9     command -> loop
Rule 10    loop -> WHILE ( logic_expression ) OPEN_SCOPE
Rule 11    if_conditional -> IF ( logic_expression ) OPEN_SCOPE
Rule 12    else_conditional -> END_SCOPE ELSE OPEN_SCOPE
Rule 13    register_command -> REGISTER ( expression )
Rule 14    arithmetic_operator -> PLUS
Rule 15    arithmetic_operator -> MINUS
Rule 16    arithmetic_operator -> TIMES
Rule 17    arithmetic_operator -> DIVISION
Rule 18    arithmetic_operator -> MODULO
Rule 19    binary_logic_operator -> AND
Rule 20    binary_logic_operator -> OR
Rule 21    unary_logic_operator -> NOT
Rule 22    comparative_operator -> GT
Rule 23    comparative_operator -> LT
Rule 24    comparative_operator -> GE
Rule 25    comparative_operator -> LE
Rule 26    comparative_operator -> EQUAL
Rule 27    comparative_operator -> NOT_EQUAL
Rule 28    unary_operator -> unary_logic_operator
Rule 29    binary_operator -> arithmetic_operator
Rule 30    binary_operator -> comparative_operator
Rule 31    binary_operator -> binary_logic_operator
Rule 32    note -> ( REAL COMMA REAL COMMA INTEGER )
Rule 33    integer_list -> INTEGER
Rule 34    integer_list -> integer_list COMMA INTEGER
Rule 35    scale -> [ integer_list ]
Rule 36    chord -> ( INTEGER COMMA INTEGER COMMA INTEGER )
Rule 37    chord_list -> chord
Rule 38    chord_list -> chord_list COMMA chord
Rule 39    harmonic_field -> [ chord_list ]
Rule 40    note_list -> note
Rule 41    note_list -> note_list COMMA note
Rule 42    music -> ( [ note_list ] COMMA REAL )
Rule 43    music -> ( [ ] COMMA REAL )
Rule 44    variable_attribution -> IDENTIFIER = expression
Rule 45    variable_declaration -> VARIABLE_TYPE IDENTIFIER = expression
Rule 46    literal -> INTEGER
Rule 47    literal -> REAL
Rule 48    literal -> BOOLEAN
Rule 49    literal -> note
Rule 50    literal -> scale
Rule 51    literal -> chord
Rule 52    literal -> harmonic_field
Rule 53    literal -> music
Rule 54    expression -> arithmetic_expression
Rule 55    expression -> logic_expression
Rule 56    expression -> literal
Rule 57    expression -> builtin_functions
Rule 58    builtin_functions -> PREDEFINED_IDENTIFIER ( params_list )
Rule 59    params_list -> expression
Rule 60    params_list -> params_list COMMA expression
Rule 61    arithmetic_expression -> arithmetic_literal
Rule 62    arithmetic_expression -> ( arithmetic_expression )
Rule 63    arithmetic_expression -> IDENTIFIER
Rule 64    arithmetic_expression -> arithmetic_expression arithmetic_operator arithmetic_expression
Rule 65    logic_expression -> BOOLEAN
Rule 66    logic_expression -> IDENTIFIER
Rule 67    logic_expression -> ( logic_expression )
Rule 68    logic_expression -> ( arithmetic_expression comparative_operator arithmetic_expression )
Rule 69    logic_expression -> logic_expression binary_logic_operator logic_expression
Rule 70    logic_expression -> unary_logic_operator logic_expression
Rule 71    arithmetic_literal -> REAL
Rule 72    arithmetic_literal -> INTEGER

Terminals, with rules where they appear

(                    : 10 11 13 32 36 42 43 58 62 67 68
)                    : 10 11 13 32 36 42 43 58 62 67 68
=                    : 44 45
AND                  : 19
BOOLEAN              : 48 65
COMMA                : 32 32 34 36 36 38 41 42 43 60
DIVISION             : 17
ELSE                 : 12
END                  : 1 2 3 4
END_SCOPE            : 8 12
EQUAL                : 26
GE                   : 24
GT                   : 22
IDENTIFIER           : 44 45 63 66
IF                   : 11
INTEGER              : 32 33 34 36 36 36 46 72
LE                   : 25
LT                   : 23
MINUS                : 15
MODULO               : 18
NOT                  : 21
NOT_EQUAL            : 27
OPEN_SCOPE           : 7 10 11 12
OR                   : 20
PLUS                 : 14
PREDEFINED_IDENTIFIER : 58
REAL                 : 32 32 42 43 47 71
REGISTER             : 13
TIMES                : 16
VARIABLE_TYPE        : 45
WHILE                : 10
[                    : 35 39 42 43
]                    : 35 39 42 43
error                : 

Nonterminals, with rules where they appear

arithmetic_expression : 54 62 64 64 68 68
arithmetic_literal   : 61
arithmetic_operator  : 29 64
binary_logic_operator : 31 69
binary_operator      : 
builtin_functions    : 57
chord                : 37 38 51
chord_list           : 38 39
command              : 3 3 0
comparative_operator : 30 68
else_conditional     : 6
expression           : 13 44 45 59 60
harmonic_field       : 52
if_conditional       : 5
integer_list         : 34 35
literal              : 56
logic_expression     : 10 11 55 67 69 69 70
loop                 : 9
music                : 53
note                 : 40 41 49
note_list            : 41 42
params_list          : 58 60
register_command     : 4
scale                : 50
unary_logic_operator : 28 70
unary_operator       : 
variable_attribution : 2
variable_declaration : 1

Parsing method: LALR

state 0

    (0) S' -> . command
    (1) command -> . variable_declaration END
    (2) command -> . variable_attribution END
    (3) command -> . command command END
    (4) command -> . register_command END
    (5) command -> . if_conditional
    (6) command -> . else_conditional
    (7) command -> . OPEN_SCOPE
    (8) command -> . END_SCOPE
    (9) command -> . loop
    (45) variable_declaration -> . VARIABLE_TYPE IDENTIFIER = expression
    (44) variable_attribution -> . IDENTIFIER = expression
    (13) register_command -> . REGISTER ( expression )
    (11) if_conditional -> . IF ( logic_expression ) OPEN_SCOPE
    (12) else_conditional -> . END_SCOPE ELSE OPEN_SCOPE
    (10) loop -> . WHILE ( logic_expression ) OPEN_SCOPE

    OPEN_SCOPE      shift and go to state 7
    END_SCOPE       shift and go to state 8
    VARIABLE_TYPE   shift and go to state 10
    IDENTIFIER      shift and go to state 11
    REGISTER        shift and go to state 12
    IF              shift and go to state 13
    WHILE           shift and go to state 14

    command                        shift and go to state 1
    variable_declaration           shift and go to state 2
    variable_attribution           shift and go to state 3
    register_command               shift and go to state 4
    if_conditional                 shift and go to state 5
    else_conditional               shift and go to state 6
    loop                           shift and go to state 9

state 1

    (0) S' -> command .
    (3) command -> command . command END
    (1) command -> . variable_declaration END
    (2) command -> . variable_attribution END
    (3) command -> . command command END
    (4) command -> . register_command END
    (5) command -> . if_conditional
    (6) command -> . else_conditional
    (7) command -> . OPEN_SCOPE
    (8) command -> . END_SCOPE
    (9) command -> . loop
    (45) variable_declaration -> . VARIABLE_TYPE IDENTIFIER = expression
    (44) variable_attribution -> . IDENTIFIER = expression
    (13) register_command -> . REGISTER ( expression )
    (11) if_conditional -> . IF ( logic_expression ) OPEN_SCOPE
    (12) else_conditional -> . END_SCOPE ELSE OPEN_SCOPE
    (10) loop -> . WHILE ( logic_expression ) OPEN_SCOPE

    OPEN_SCOPE      shift and go to state 7
    END_SCOPE       shift and go to state 8
    VARIABLE_TYPE   shift and go to state 10
    IDENTIFIER      shift and go to state 11
    REGISTER        shift and go to state 12
    IF              shift and go to state 13
    WHILE           shift and go to state 14

    command                        shift and go to state 15
    variable_declaration           shift and go to state 2
    variable_attribution           shift and go to state 3
    register_command               shift and go to state 4
    if_conditional                 shift and go to state 5
    else_conditional               shift and go to state 6
    loop                           shift and go to state 9

state 2

    (1) command -> variable_declaration . END

    END             shift and go to state 16


state 3

    (2) command -> variable_attribution . END

    END             shift and go to state 17


state 4

    (4) command -> register_command . END

    END             shift and go to state 18


state 5

    (5) command -> if_conditional .

    OPEN_SCOPE      reduce using rule 5 (command -> if_conditional .)
    END_SCOPE       reduce using rule 5 (command -> if_conditional .)
    VARIABLE_TYPE   reduce using rule 5 (command -> if_conditional .)
    IDENTIFIER      reduce using rule 5 (command -> if_conditional .)
    REGISTER        reduce using rule 5 (command -> if_conditional .)
    IF              reduce using rule 5 (command -> if_conditional .)
    WHILE           reduce using rule 5 (command -> if_conditional .)
    $end            reduce using rule 5 (command -> if_conditional .)
    END             reduce using rule 5 (command -> if_conditional .)


state 6

    (6) command -> else_conditional .

    OPEN_SCOPE      reduce using rule 6 (command -> else_conditional .)
    END_SCOPE       reduce using rule 6 (command -> else_conditional .)
    VARIABLE_TYPE   reduce using rule 6 (command -> else_conditional .)
    IDENTIFIER      reduce using rule 6 (command -> else_conditional .)
    REGISTER        reduce using rule 6 (command -> else_conditional .)
    IF              reduce using rule 6 (command -> else_conditional .)
    WHILE           reduce using rule 6 (command -> else_conditional .)
    $end            reduce using rule 6 (command -> else_conditional .)
    END             reduce using rule 6 (command -> else_conditional .)


state 7

    (7) command -> OPEN_SCOPE .

    OPEN_SCOPE      reduce using rule 7 (command -> OPEN_SCOPE .)
    END_SCOPE       reduce using rule 7 (command -> OPEN_SCOPE .)
    VARIABLE_TYPE   reduce using rule 7 (command -> OPEN_SCOPE .)
    IDENTIFIER      reduce using rule 7 (command -> OPEN_SCOPE .)
    REGISTER        reduce using rule 7 (command -> OPEN_SCOPE .)
    IF              reduce using rule 7 (command -> OPEN_SCOPE .)
    WHILE           reduce using rule 7 (command -> OPEN_SCOPE .)
    $end            reduce using rule 7 (command -> OPEN_SCOPE .)
    END             reduce using rule 7 (command -> OPEN_SCOPE .)


state 8

    (8) command -> END_SCOPE .
    (12) else_conditional -> END_SCOPE . ELSE OPEN_SCOPE

    OPEN_SCOPE      reduce using rule 8 (command -> END_SCOPE .)
    END_SCOPE       reduce using rule 8 (command -> END_SCOPE .)
    VARIABLE_TYPE   reduce using rule 8 (command -> END_SCOPE .)
    IDENTIFIER      reduce using rule 8 (command -> END_SCOPE .)
    REGISTER        reduce using rule 8 (command -> END_SCOPE .)
    IF              reduce using rule 8 (command -> END_SCOPE .)
    WHILE           reduce using rule 8 (command -> END_SCOPE .)
    $end            reduce using rule 8 (command -> END_SCOPE .)
    END             reduce using rule 8 (command -> END_SCOPE .)
    ELSE            shift and go to state 19


state 9

    (9) command -> loop .

    OPEN_SCOPE      reduce using rule 9 (command -> loop .)
    END_SCOPE       reduce using rule 9 (command -> loop .)
    VARIABLE_TYPE   reduce using rule 9 (command -> loop .)
    IDENTIFIER      reduce using rule 9 (command -> loop .)
    REGISTER        reduce using rule 9 (command -> loop .)
    IF              reduce using rule 9 (command -> loop .)
    WHILE           reduce using rule 9 (command -> loop .)
    $end            reduce using rule 9 (command -> loop .)
    END             reduce using rule 9 (command -> loop .)


state 10

    (45) variable_declaration -> VARIABLE_TYPE . IDENTIFIER = expression

    IDENTIFIER      shift and go to state 20


state 11

    (44) variable_attribution -> IDENTIFIER . = expression

    =               shift and go to state 21


state 12

    (13) register_command -> REGISTER . ( expression )

    (               shift and go to state 22


state 13

    (11) if_conditional -> IF . ( logic_expression ) OPEN_SCOPE

    (               shift and go to state 23


state 14

    (10) loop -> WHILE . ( logic_expression ) OPEN_SCOPE

    (               shift and go to state 24


state 15

    (3) command -> command command . END
    (3) command -> command . command END
    (1) command -> . variable_declaration END
    (2) command -> . variable_attribution END
    (3) command -> . command command END
    (4) command -> . register_command END
    (5) command -> . if_conditional
    (6) command -> . else_conditional
    (7) command -> . OPEN_SCOPE
    (8) command -> . END_SCOPE
    (9) command -> . loop
    (45) variable_declaration -> . VARIABLE_TYPE IDENTIFIER = expression
    (44) variable_attribution -> . IDENTIFIER = expression
    (13) register_command -> . REGISTER ( expression )
    (11) if_conditional -> . IF ( logic_expression ) OPEN_SCOPE
    (12) else_conditional -> . END_SCOPE ELSE OPEN_SCOPE
    (10) loop -> . WHILE ( logic_expression ) OPEN_SCOPE

    END             shift and go to state 25
    OPEN_SCOPE      shift and go to state 7
    END_SCOPE       shift and go to state 8
    VARIABLE_TYPE   shift and go to state 10
    IDENTIFIER      shift and go to state 11
    REGISTER        shift and go to state 12
    IF              shift and go to state 13
    WHILE           shift and go to state 14

    command                        shift and go to state 15
    variable_declaration           shift and go to state 2
    variable_attribution           shift and go to state 3
    register_command               shift and go to state 4
    if_conditional                 shift and go to state 5
    else_conditional               shift and go to state 6
    loop                           shift and go to state 9

state 16

    (1) command -> variable_declaration END .

    OPEN_SCOPE      reduce using rule 1 (command -> variable_declaration END .)
    END_SCOPE       reduce using rule 1 (command -> variable_declaration END .)
    VARIABLE_TYPE   reduce using rule 1 (command -> variable_declaration END .)
    IDENTIFIER      reduce using rule 1 (command -> variable_declaration END .)
    REGISTER        reduce using rule 1 (command -> variable_declaration END .)
    IF              reduce using rule 1 (command -> variable_declaration END .)
    WHILE           reduce using rule 1 (command -> variable_declaration END .)
    $end            reduce using rule 1 (command -> variable_declaration END .)
    END             reduce using rule 1 (command -> variable_declaration END .)


state 17

    (2) command -> variable_attribution END .

    OPEN_SCOPE      reduce using rule 2 (command -> variable_attribution END .)
    END_SCOPE       reduce using rule 2 (command -> variable_attribution END .)
    VARIABLE_TYPE   reduce using rule 2 (command -> variable_attribution END .)
    IDENTIFIER      reduce using rule 2 (command -> variable_attribution END .)
    REGISTER        reduce using rule 2 (command -> variable_attribution END .)
    IF              reduce using rule 2 (command -> variable_attribution END .)
    WHILE           reduce using rule 2 (command -> variable_attribution END .)
    $end            reduce using rule 2 (command -> variable_attribution END .)
    END             reduce using rule 2 (command -> variable_attribution END .)


state 18

    (4) command -> register_command END .

    OPEN_SCOPE      reduce using rule 4 (command -> register_command END .)
    END_SCOPE       reduce using rule 4 (command -> register_command END .)
    VARIABLE_TYPE   reduce using rule 4 (command -> register_command END .)
    IDENTIFIER      reduce using rule 4 (command -> register_command END .)
    REGISTER        reduce using rule 4 (command -> register_command END .)
    IF              reduce using rule 4 (command -> register_command END .)
    WHILE           reduce using rule 4 (command -> register_command END .)
    $end            reduce using rule 4 (command -> register_command END .)
    END             reduce using rule 4 (command -> register_command END .)


state 19

    (12) else_conditional -> END_SCOPE ELSE . OPEN_SCOPE

    OPEN_SCOPE      shift and go to state 26


state 20

    (45) variable_declaration -> VARIABLE_TYPE IDENTIFIER . = expression

    =               shift and go to state 27


state 21

    (44) variable_attribution -> IDENTIFIER = . expression
    (54) expression -> . arithmetic_expression
    (55) expression -> . logic_expression
    (56) expression -> . literal
    (57) expression -> . builtin_functions
    (61) arithmetic_expression -> . arithmetic_literal
    (62) arithmetic_expression -> . ( arithmetic_expression )
    (63) arithmetic_expression -> . IDENTIFIER
    (64) arithmetic_expression -> . arithmetic_expression arithmetic_operator arithmetic_expression
    (65) logic_expression -> . BOOLEAN
    (66) logic_expression -> . IDENTIFIER
    (67) logic_expression -> . ( logic_expression )
    (68) logic_expression -> . ( arithmetic_expression comparative_operator arithmetic_expression )
    (69) logic_expression -> . logic_expression binary_logic_operator logic_expression
    (70) logic_expression -> . unary_logic_operator logic_expression
    (46) literal -> . INTEGER
    (47) literal -> . REAL
    (48) literal -> . BOOLEAN
    (49) literal -> . note
    (50) literal -> . scale
    (51) literal -> . chord
    (52) literal -> . harmonic_field
    (53) literal -> . music
    (58) builtin_functions -> . PREDEFINED_IDENTIFIER ( params_list )
    (71) arithmetic_literal -> . REAL
    (72) arithmetic_literal -> . INTEGER
    (21) unary_logic_operator -> . NOT
    (32) note -> . ( REAL COMMA REAL COMMA INTEGER )
    (35) scale -> . [ integer_list ]
    (36) chord -> . ( INTEGER COMMA INTEGER COMMA INTEGER )
    (39) harmonic_field -> . [ chord_list ]
    (42) music -> . ( [ note_list ] COMMA REAL )
    (43) music -> . ( [ ] COMMA REAL )

    (               shift and go to state 35
    IDENTIFIER      shift and go to state 28
    BOOLEAN         shift and go to state 36
    INTEGER         shift and go to state 38
    REAL            shift and go to state 39
    PREDEFINED_IDENTIFIER shift and go to state 45
    NOT             shift and go to state 46
    [               shift and go to state 47

    expression                     shift and go to state 29
    arithmetic_expression          shift and go to state 30
    logic_expression               shift and go to state 31
    literal                        shift and go to state 32
    builtin_functions              shift and go to state 33
    arithmetic_literal             shift and go to state 34
    unary_logic_operator           shift and go to state 37
    note                           shift and go to state 40
    scale                          shift and go to state 41
    chord                          shift and go to state 42
    harmonic_field                 shift and go to state 43
    music                          shift and go to state 44

state 22

    (13) register_command -> REGISTER ( . expression )
    (54) expression -> . arithmetic_expression
    (55) expression -> . logic_expression
    (56) expression -> . literal
    (57) expression -> . builtin_functions
    (61) arithmetic_expression -> . arithmetic_literal
    (62) arithmetic_expression -> . ( arithmetic_expression )
    (63) arithmetic_expression -> . IDENTIFIER
    (64) arithmetic_expression -> . arithmetic_expression arithmetic_operator arithmetic_expression
    (65) logic_expression -> . BOOLEAN
    (66) logic_expression -> . IDENTIFIER
    (67) logic_expression -> . ( logic_expression )
    (68) logic_expression -> . ( arithmetic_expression comparative_operator arithmetic_expression )
    (69) logic_expression -> . logic_expression binary_logic_operator logic_expression
    (70) logic_expression -> . unary_logic_operator logic_expression
    (46) literal -> . INTEGER
    (47) literal -> . REAL
    (48) literal -> . BOOLEAN
    (49) literal -> . note
    (50) literal -> . scale
    (51) literal -> . chord
    (52) literal -> . harmonic_field
    (53) literal -> . music
    (58) builtin_functions -> . PREDEFINED_IDENTIFIER ( params_list )
    (71) arithmetic_literal -> . REAL
    (72) arithmetic_literal -> . INTEGER
    (21) unary_logic_operator -> . NOT
    (32) note -> . ( REAL COMMA REAL COMMA INTEGER )
    (35) scale -> . [ integer_list ]
    (36) chord -> . ( INTEGER COMMA INTEGER COMMA INTEGER )
    (39) harmonic_field -> . [ chord_list ]
    (42) music -> . ( [ note_list ] COMMA REAL )
    (43) music -> . ( [ ] COMMA REAL )

    (               shift and go to state 35
    IDENTIFIER      shift and go to state 28
    BOOLEAN         shift and go to state 36
    INTEGER         shift and go to state 38
    REAL            shift and go to state 39
    PREDEFINED_IDENTIFIER shift and go to state 45
    NOT             shift and go to state 46
    [               shift and go to state 47

    expression                     shift and go to state 48
    arithmetic_expression          shift and go to state 30
    logic_expression               shift and go to state 31
    literal                        shift and go to state 32
    builtin_functions              shift and go to state 33
    arithmetic_literal             shift and go to state 34
    unary_logic_operator           shift and go to state 37
    note                           shift and go to state 40
    scale                          shift and go to state 41
    chord                          shift and go to state 42
    harmonic_field                 shift and go to state 43
    music                          shift and go to state 44

state 23

    (11) if_conditional -> IF ( . logic_expression ) OPEN_SCOPE
    (65) logic_expression -> . BOOLEAN
    (66) logic_expression -> . IDENTIFIER
    (67) logic_expression -> . ( logic_expression )
    (68) logic_expression -> . ( arithmetic_expression comparative_operator arithmetic_expression )
    (69) logic_expression -> . logic_expression binary_logic_operator logic_expression
    (70) logic_expression -> . unary_logic_operator logic_expression
    (21) unary_logic_operator -> . NOT

    BOOLEAN         shift and go to state 51
    IDENTIFIER      shift and go to state 52
    (               shift and go to state 49
    NOT             shift and go to state 46

    logic_expression               shift and go to state 50
    unary_logic_operator           shift and go to state 37

state 24

    (10) loop -> WHILE ( . logic_expression ) OPEN_SCOPE
    (65) logic_expression -> . BOOLEAN
    (66) logic_expression -> . IDENTIFIER
    (67) logic_expression -> . ( logic_expression )
    (68) logic_expression -> . ( arithmetic_expression comparative_operator arithmetic_expression )
    (69) logic_expression -> . logic_expression binary_logic_operator logic_expression
    (70) logic_expression -> . unary_logic_operator logic_expression
    (21) unary_logic_operator -> . NOT

    BOOLEAN         shift and go to state 51
    IDENTIFIER      shift and go to state 52
    (               shift and go to state 49
    NOT             shift and go to state 46

    logic_expression               shift and go to state 53
    unary_logic_operator           shift and go to state 37

state 25

    (3) command -> command command END .

    OPEN_SCOPE      reduce using rule 3 (command -> command command END .)
    END_SCOPE       reduce using rule 3 (command -> command command END .)
    VARIABLE_TYPE   reduce using rule 3 (command -> command command END .)
    IDENTIFIER      reduce using rule 3 (command -> command command END .)
    REGISTER        reduce using rule 3 (command -> command command END .)
    IF              reduce using rule 3 (command -> command command END .)
    WHILE           reduce using rule 3 (command -> command command END .)
    $end            reduce using rule 3 (command -> command command END .)
    END             reduce using rule 3 (command -> command command END .)


state 26

    (12) else_conditional -> END_SCOPE ELSE OPEN_SCOPE .
